--- a/.nixpacks.toml
+++ b/.nixpacks.toml
@@ -1,12 +1,16 @@
+[variables]
+# Force Node 22.12 (Prisma requires >=22.12 on 22.x line)
+NIXPACKS_NODE_VERSION = "22.12.0"
+
 [phases.setup]
 # Use Node.js 22 to satisfy Prisma 7 requirements during install/build
 nixPkgs = ["nodejs_22"]
 
 [phases.install]
-cmd = "npm ci"
+cmds = ["npm ci --omit=dev"]
 
 [phases.build]
-cmd = "npm run build"
+cmds = ["npm run build"]
 
 [start]
 cmd = "npm run start:prod"
